[gd_scene load_steps=3 format=3 uid="uid://klhftk825ltp"]

[ext_resource type="Script" uid="uid://do121pqc27568" path="res://scenes/rhythm_game.gd" id="1_pbj7f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76igm"]

[node name="RhythmGame" type="Node2D"]
script = ExtResource("1_pbj7f")

[node name="GameArea" type="Node2D" parent="."]

[node name="ColumnDividers" type="Node2D" parent="GameArea"]

[node name="HitZone" type="Area2D" parent="GameArea"]

[node name="HitZoneCollision" type="CollisionShape2D" parent="GameArea/HitZone"]
shape = SubResource("RectangleShape2D_76igm")

[node name="HitZoneVisual" type="ColorRect" parent="GameArea/HitZone"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Notes" type="Node2D" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="Label" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Sounds" type="Node2D" parent="."]

[connection signal="area_entered" from="GameArea/HitZone" to="." method="_on_hit_zone_area_entered"]
[connection signal="area_exited" from="GameArea/HitZone" to="." method="_on_hit_zone_area_exited"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
